--- a/TeamCode/src/main/assets/ActionConfig/WobbleArmConfig.json
+++ b/TeamCode/src/main/assets/ActionConfig/WobbleArmConfig.json
@@ -4,6 +4,10 @@
   "HOLD_KI":"0.0",
   "HOLD_I_MAX":"0.0",
   "HOLD_KD":"0.0",
+  "RPM_KP": "0.0",
+  "RPM_KI":"0.0",
+  "RPM_I_MAX":"0.0",
+  "RPM_KD":"0.0",
   "TICKS_PER_DEGREE":"1.6",
   "INITIAL_DEGREE":"0"
 }
